# bootc-base-imagectl

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
examples/: basef-minimal.toml
src/: chroot.rs  lib.rs  main.rs  manifest.rs  treefile.rs
src/transforms/: boot_relocate.rs  chroot_ops.rs  cleanup.rs  dnf_config.rs  dracut_config.rs  mod.rs  ostree_config.rs  passwd.rs  rpmdb.rs  symlinks.rs  systemd_config.rs  var_tmpfiles.rs
tests/: e2e-validate.sh  integration.rs
