[package]
name = "bootc-base-imagectl"
version = "0.1.0"
edition = "2024"
rust-version = "1.86.0"
license = "MIT OR Apache-2.0"
description = "Transforms a dnf --installroot rootfs into a bootc-compatible layout"
repository = "https://github.com/andrewdunndev/bootc-base-imagectl"
keywords = ["bootc", "ostree", "composefs", "rpm", "immutable"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
anyhow = "1.0.82"
camino = "1.1.6"
cap-std-ext = "5.1.1"
clap = { version = "4.5.4", features = ["derive"] }
fn-error-context = "0.2.1"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
serde_yaml_ng = "0.9.36"
toml = "1.0.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.10.1"

[lints.rust]
unsafe_code = "deny"
unused_must_use = "forbid"
missing_debug_implementations = "deny"

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
